Fix header text colors on link so they're not ugly.

--- a/McBlocks/McBlocks.css
+++ b/McBlocks/McBlocks.css
@@ -30,6 +30,7 @@ SOFTWARE.
     padding: 5px;
     display: inline-block;
     overflow: hidden;
+    color: black;
 }
 .mainBlockHeader {
     position: absolute;    
